STEP 2
Logic to add offers
Test cases
100% coverage in usecases certified by jacoco